# baldric

./: .gitignore  README.md  main.py  pyproject.toml  testing.ipynb
baldric/: configuration.py  core.py  metrics.py  planner.py  problem.py  sampler.py  utils.py
baldric/collision/: __init__.py  aabb_collision.py  collision.py  convex_collision.py  gjk.py
baldric/commands/: cli.py  config.py  factory.py  samples.py
baldric/geometry/: __init__.py  aabb.py  convex_polygon.py
baldric/goals/: __init__.py
baldric/planners/: __init__.py  planner.py  prm.py  rrt.py
baldric/plotting/: __init__.py  core.py  geometry.py
baldric/sampler/: __init__.py  baised.py  sampler.py
baldric/spaces/: __init__.py  dubins.py  dubins_space.py  piecewise_path.py  rigid2d_space.py  space.py  vector_space.py
tests/: test_collchecker.py  test_collision.py  test_dubins.py  test_dubins_space.py  test_examples.py  test_metrics.py  test_piecewise_path.py  test_prm.py  test_rrt.py  test_sampler.py  test_space.py
