[project]
name = "baldric"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "hypothesis>=6.137.1",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "scipy>=1.16.1",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.scripts]
baldric-solve = "baldric.commands.cli:solve"
baldric-write-samples = "baldric.commands.cli:create_samples"
baldric-solve-sample = "baldric.commands.cli:solve_sample"
baldric-solve-all-samples = "baldric.commands.cli:solve_all_samples"